deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolify
  namespace: application
spec:
  selector:
    matchLabels:
      app: toolify
  template:
    metadata:
      labels:
        app: toolify
        version: 'v1'
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: toolify
        securityContext:
          privileged: true
        image: gowthamd07101999/toolify:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
