deployment/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: toolify
  namespace: application
spec:
  replicas: 1
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {}
        - setWeight: 100
      trafficRouting:
        istio:
          virtualService:
            name: toolify
            routes:
            - toolify
          destinationRule:
            name: toolify
            canarySubsetName: 'bd3364a'
            stableSubsetName: 'd2c5eea'
  selector:
    matchLabels:
      app: toolify
  template:
    metadata:
      labels:
        app: toolify
        version: 'd2c5eea'
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: toolify
        securityContext:
          privileged: true
        image: gowthamd07101999/toolify:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
