deployment/destinationreules.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toolify
  namespace: application
spec:
  exportTo:
  - '*'
  host: toolify
  subsets:
    - name: 'd2c5eea'
      labels:
        version: 'd2c5eea'
    - name: 'bd3364a'
      labels:
        version: 'bd3364a'
  trafficPolicy: 
    loadBalancer:
      simple: ROUND_ROBIN
