deployment/destinationsrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toolify
  namespace: application
spec:
  host: toolify
  subsets:
  - labels:
      version: 'v2'
    name: 'v2'
