deployment/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: toolify
  namespace: application
spec:
  gateways:
  - toolify
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /
    name: toolify
    route:
    - destination:
        host: toolify
        port:
          number: 8000
        subset: d2c5eea
      weight: 100
    - destination:
        host: toolify
        port:
          number: 8000
        subset: bd3364a
      weight: 0
